Added extra page. Changed image on start-page

--- a/AkademietTest2/AppShell.xaml
+++ b/AkademietTest2/AppShell.xaml
@@ -11,5 +11,10 @@
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
+    <ShellContent
+        Title="ItemsList"
+        ContentTemplate="{DataTemplate local:ItemsList}"
+        Route="ItemsList" />
+
 </Shell>
 
