--- a/AkademietTest2/MainPage.xaml
+++ b/AkademietTest2/MainPage.xaml
@@ -10,7 +10,7 @@
             VerticalOptions="Center">
 
             <Image
-                Source="dotnet_bot.png"
+                Source="house.png"
                 SemanticProperties.Description="Cute dot net bot waving hi to you!"
                 HeightRequest="200"
                 HorizontalOptions="Center" />
@@ -34,6 +34,13 @@
                 Text="Click me"
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnCounterClicked"
+                HorizontalOptions="Center" />
+
+            <Button
+                x:Name="NavListBtn"
+                Text="Liste-siden"
+                SemanticProperties.Hint="Navigate to list-page"
+                Clicked="NavListBtn_Clicked"
                 HorizontalOptions="Center" />
 
         </VerticalStackLayout>
