--- a/AkademietTest2/Resources/Styles/Styles.xaml
+++ b/AkademietTest2/Resources/Styles/Styles.xaml
@@ -177,6 +177,7 @@
     </Style>
 
     <Style TargetType="ListView">
+        <Setter Property="BackgroundColor" Value="Transparent" />
         <Setter Property="SeparatorColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray500}}" />
         <Setter Property="RefreshControlColor" Value="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource Gray200}}" />
     </Style>
